1836 lightbox t&c content missing and alignment fix

--- a/src/main/webapp/resources/css/styles-fwdiscover.css
+++ b/src/main/webapp/resources/css/styles-fwdiscover.css
@@ -1565,3 +1565,7 @@
 	   display: block;
 	}
 }
+.fwdiscover-modal .terms-and-condition ul{
+	margin-top: 0;
+	padding-left: 15px;
+}
